Edited wiki page Summary through web user interface.

--- a/wiki/Summary.wiki
+++ b/wiki/Summary.wiki
@@ -1,4 +1,5 @@
 #summary Something about SMS-Plan
+#labels Featured,Phase-Requirements
 
 = Introduction =
 
@@ -10,3 +11,5 @@ SMS-Plan is an Android-App to send automatically SMS to contacts.
   * Sending SMS with custom text at a custom date/time
   * Generate SMS-Text for some events like Christmas, New Year Eve, Birthday, ...
   * Choose (multiple) contacts from your address book or type manually in a number
+  * See older entries in a history activty
+  * See upcomming entries in a upcoming activity
